determining theme layout file based on subdomain

--- a/ThemeableSubdomains.Prototype/Views/_ViewStart.cshtml
+++ b/ThemeableSubdomains.Prototype/Views/_ViewStart.cshtml
@@ -1,3 +1,6 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    var themeLayoutFile = Session["ThemeLayoutFile"] as string ?? string.Empty;
+    Layout = (string.IsNullOrEmpty(themeLayoutFile) || !File.Exists(themeLayoutFile)) 
+                ? "~/Views/Shared/_Layout.cshtml" 
+                : themeLayoutFile;
 }
