--- a/ThemeableSubdomains.Prototype/Views/Shared/Themes/boom/_Layout.cshtml
+++ b/ThemeableSubdomains.Prototype/Views/Shared/Themes/boom/_Layout.cshtml
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/css/boom")
+
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -17,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("DEFAULT theme!!!", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("BOOM theme!!!", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
