--- a/ThemeableSubdomains.Prototype/Views/Home/Index.cshtml
+++ b/ThemeableSubdomains.Prototype/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
     <p>subdomain: @ViewBag.Subdomain</p>
+    <p>theme layout file: @Session["ThemeLayoutFile"]</p>
 </div>
 
 <div class="row">
