correctly checking if laayout file exists on the server

--- a/ThemeableSubdomains.Prototype/Views/_ViewStart.cshtml
+++ b/ThemeableSubdomains.Prototype/Views/_ViewStart.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     var themeLayoutFile = Session["ThemeLayoutFile"] as string ?? string.Empty;
-    Layout = (string.IsNullOrEmpty(themeLayoutFile) || !File.Exists(themeLayoutFile)) 
+    var layoutFile = (string.IsNullOrEmpty(themeLayoutFile) || !File.Exists(HttpContext.Current.Server.MapPath(themeLayoutFile))) 
                 ? "~/Views/Shared/_Layout.cshtml" 
                 : themeLayoutFile;
+    Layout = layoutFile;
 }
