--- a/ThemeableSubdomains.Prototype/Views/Home/Index.cshtml
+++ b/ThemeableSubdomains.Prototype/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
     <p>subdomain: @ViewBag.Subdomain</p>
     <p>theme layout file: @Session["ThemeLayoutFile"]</p>
+    <p>Layout: @Layout</p>
 </div>
 
 <div class="row">
