--- a/ThemeableSubdomains.Prototype/Views/Shared/Themes/boom/_Layout.cshtml
+++ b/ThemeableSubdomains.Prototype/Views/Shared/Themes/boom/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
+    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/darkly/bootstrap.min.css" rel="stylesheet" />
     @Styles.Render("~/Content/css/boom")
 
     @Scripts.Render("~/bundles/modernizr")
