--- a/ThemeableSubdomains.Prototype/Views/Shared/Themes/boom/_Layout.cshtml
+++ b/ThemeableSubdomains.Prototype/Views/Shared/Themes/boom/_Layout.cshtml
@@ -1,16 +1,40 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/darkly/bootstrap.min.css" rel="stylesheet" />
-    @Styles.Render("~/Content/css/boom")
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>@ViewBag.Title - My ASP.NET Application</title>
+        <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/darkly/bootstrap.min.css" rel="stylesheet" />
+        <link href="/Content/Themes/boom/boom.css" rel="stylesheet" />
+        @Scripts.Render("~/bundles/modernizr")
 
-    @Scripts.Render("~/bundles/modernizr")
-
-</head>
+    </head>
 <body>
+
+    <div class="container">
+        <div class="header">
+            <ul class="nav nav-pills pull-right" role="tablist">
+                <li role="presentation" class="active"><a href="#">Home</a></li>
+                <li role="presentation"><a href="#">About</a></li>
+                <li role="presentation"><a href="#">Contact</a></li>
+            </ul>
+            @Html.Partial("_LoginPartial")
+            <h3 class="text-muted">Project name</h3>
+        </div>
+        @RenderBody()
+        <div class="footer">
+            <p>&copy; Company 2014</p>
+        </div>
+
+    </div> <!-- /container -->
+    
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
+</body>
+
+
+    @*<body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -42,5 +66,5 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-</body>
+</body>*@
 </html>
